Correct wafer-visible and wafer-invisible CSS.'

--- a/wafer/static/css/wafer.css
+++ b/wafer/static/css/wafer.css
@@ -15,10 +15,10 @@
 	display: none;
 }
 
-#wafer-visible {
+.wafer-visible {
 }
 
-#wafer-invisible {
+.wafer-invisible {
 	display: none;
 }
 
